# Amplify

./: .SRCINFO  .gitignore  AUR_QUICK_START.md  DEVELOPMENT.md  LICENSE  Makefile  PKGBUILD  README.md  amplify-1.1.4-1-any.pkg.tar.zst  amplify-1.2.4-1-any.pkg.tar.zst  amplify.py  pyproject.toml  setup.py  sounds.txt
amplify/: FETCH_HEAD  config  main.py  packed-refs
amplify/audio/: player.py  router.py
amplify/info/: refs
amplify/objects/info/: packs
amplify/objects/pack/: multi-pack-index  pack-1b71965149f0be870ea7798e50e7791fdedfdb8b.idx  pack-1b71965149f0be870ea7798e50e7791fdedfdb8b.mtimes  pack-1b71965149f0be870ea7798e50e7791fdedfdb8b.pack  pack-1b71965149f0be870ea7798e50e7791fdedfdb8b.rev  pack-289fdc9c211e98ae627c54d3a6ecc80db01c35ad.idx  pack-289fdc9c211e98ae627c54d3a6ecc80db01c35ad.pack  pack-289fdc9c211e98ae627c54d3a6ecc80db01c35ad.rev  pack-4b2cd3da7f6199382cb32b8fc1a39bf3bac02a66.idx  pack-4b2cd3da7f6199382cb32b8fc1a39bf3bac02a66.pack  pack-4b2cd3da7f6199382cb32b8fc1a39bf3bac02a66.rev  pack-fce7558027046123372839b11baf2d9a3307c5ca.idx  pack-fce7558027046123372839b11baf2d9a3307c5ca.pack  pack-fce7558027046123372839b11baf2d9a3307c5ca.rev
amplify/refs/codex/turn-diffs/captures/1781478808310/d2e19203-8f3e-4a4f-afcd-deb707099461/: base
amplify/refs/heads/: main
amplify/sounds/: soundlist.py
amplify/ui/: mainwindow.py
assets/: amplify.desktop
docs/: AUR_PUBLISHING.md
packaging/: PKGBUILD  amplify.desktop
pkg/amplify/: .BUILDINFO  .MTREE  .PKGINFO
scripts/: publish-aur.sh
