[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "amplify"
version = "0.1.0"
description = "Arch Linux soundboard with PipeWire virtual microphone support"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Amplify Contributors" }
]
keywords = ["soundboard", "audio", "pipewire", "pulseaudio", "voicemod"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Multimedia :: Sound/Audio",
]

dependencies = [
    "PyQt6>=6.0.0",
    "sounddevice>=0.4.5",
    "soundfile>=0.11.0",
    "httpx>=0.23.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "flake8>=5.0",
    "mypy>=1.0",
]

[project.scripts]
amplify = "amplify.main:main"

[tool.setuptools]
packages = ["amplify", "amplify.ui", "amplify.audio", "amplify.sounds"]

[tool.setuptools.data-files]
"share/applications" = ["packaging/amplify.desktop"]

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
